--- a/package.json
+++ b/package.json
@@ -44,5 +44,5 @@
   "devDependencies": {
     "gh-pages": "^4.0.0"
   },
-  "homepage": "https://sas.github.io/sas-react"
+  "homepage": "https://tmpdv.github.io/sas-react"
 }
